templates: Fix vertical alignment of globe icon.
This commit fixes the vertical alignement of globe icon in
inline_decorated_stream_name template by setting it using
relative units instead of px so that it is better aligned
at multiple places with different sizes.

--- a/web/styles/app_components.css
+++ b/web/styles/app_components.css
@@ -828,7 +828,7 @@ div.overlay {
 .stream-privacy-type-icon {
     &.zulip-icon-globe {
         position: relative;
-        top: 1px;
+        top: 0.06em;
         padding-right: 1px;
         font-size: 0.75em;
     }
